add functionality for gradlew scripts(2)

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,31 @@ dependencies {
 test {
     useTestNG()
 }
+
+task loginTests(type:Test){
+    useTestNG(){
+        suites'src/test/resources/testNG.xml'
+    }
+    if(project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
+
+task shortTests(type:Test){
+    useTestNG() {
+        if (project.hasProperty('browser')) {
+            systemProperty 'browser', "${browser}"
+        }
+        def suite = System.getProperty('suite')
+        if(suite.equals('login')){
+            suites 'src/test/resources/testNG.xml'
+        }else{
+            suites 'src/test/resources/shorttests.xml'
+        }
+        def groups = System.getProperty('groups')
+        if(groups != null){
+            includeGroups groups
+        }
+    }
+
+}
